[tool.poetry]
name = "match_srt"
version = "0.1.0"
description = ""
authors = ["MasterGowen <mastergowen@gmail.com>"]

packages = [
    { include = 'match_srt' }
]

repository = 'https://github.com/urfu-online/match_srt'

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pysrt = "^1.1.2"
rich = "^13.3.3"
opencv-python = "^4.7.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
match_srt = 'match_srt.match_srt:matching'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
